--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CSS Challenge Day 6</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/cropped-sit-icon-jb.jpg">
 </head>
 <body>
     <div class="frame">
